--- a/Final project/excursion.html
+++ b/Final project/excursion.html
@@ -27,10 +27,10 @@
     </header>
     <div class="search">
         <div class="excursion-type">
-            <p>АВТОБУСНЫЙ ТУР</p>
-            <p>ДЖИППИНГ</p>
-            <p>ЯХТИНГ</p>
-            <p>КАНЬОНИНГ</p>
+            <p><a href="">АВТОБУСНЫЙ ТУР</a></p>
+            <p><a href="">ДЖИППИНГ</a></p>
+            <p><a href="">ЯХТИНГ</a></p>
+            <p><a href="">КАНЬОНИНГ</a></p>
         </div>
         <div class="search-form">
             <form>
