--- a/Final project/main_page.html
+++ b/Final project/main_page.html
@@ -65,7 +65,7 @@
 
     <div class="video">
         <video poster="Images/images/main_video_img.png">
-            <source src="boat_-_1412 (360p).mp4">
+            <source src="Video/boat_-_1412 (360p).mp4">
         </video>
         <button id="playButton" onclick="playVideo(this.parentElement)"><img id="playImg"
                 src="Images/svg/video_play_button.svg"></button>
